[gd_scene load_steps=24 format=3 uid="uid://dfx06g431ym8h"]

[ext_resource type="Script" uid="uid://blpr22y5dbw0d" path="res://scripts/flying_sec.gd" id="1_pgmig"]
[ext_resource type="PackedScene" uid="uid://cojemwl3wpq28" path="res://scenes/hurtbox.tscn" id="2_n3a6s"]
[ext_resource type="Texture2D" uid="uid://gg2pdt8c6c6a" path="res://assets/sprites/Flying_tazer.png" id="2_skm0b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qm8lu"]
size = Vector2(270, 509)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_05wi8"]
size = Vector2(266.75, 505.1875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_owgmq"]
size = Vector2(270, 509.75)

[sub_resource type="AtlasTexture" id="AtlasTexture_skm0b"]
atlas = ExtResource("2_skm0b")
region = Rect2(0, 1034, 512, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgmig"]
atlas = ExtResource("2_skm0b")
region = Rect2(512, 1034, 512, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3a6s"]
atlas = ExtResource("2_skm0b")
region = Rect2(1024, 1034, 512, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v8yr"]
atlas = ExtResource("2_skm0b")
region = Rect2(0, 1551, 512, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_co4es"]
atlas = ExtResource("2_skm0b")
region = Rect2(512, 1551, 512, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_djxrl"]
atlas = ExtResource("2_skm0b")
region = Rect2(1024, 1551, 512, 517)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uebq"]
atlas = ExtResource("2_skm0b")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5odm"]
atlas = ExtResource("2_skm0b")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cpjd"]
atlas = ExtResource("2_skm0b")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_i73po"]
atlas = ExtResource("2_skm0b")
region = Rect2(0, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv0u1"]
atlas = ExtResource("2_skm0b")
region = Rect2(512, 512, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_dt8hy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_skm0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgmig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3a6s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v8yr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co4es")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djxrl")
}],
"loop": false,
"name": &"Attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uebq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5odm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cpjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i73po")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv0u1")
}],
"loop": false,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_skm0b"]
resource_name = "Idle"
length = 0.50001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_uvh2r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"new_animation"]
}

[sub_resource type="Animation" id="Animation_qj3hu"]
resource_name = "attack"
length = 1.00001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 2, 1, 0, 0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"shoot_bolt"
}, {
"args": [],
"method": &"start_Idle"
}]
}

[sub_resource type="Animation" id="Animation_pgmig"]
resource_name = "new_animation"
step = 0.1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xad4x"]
_data = {
&"Idle": SubResource("Animation_skm0b"),
&"RESET": SubResource("Animation_uvh2r"),
&"attack": SubResource("Animation_qj3hu"),
&"new_animation": SubResource("Animation_pgmig")
}

[node name="Flying_sec" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_pgmig")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("RectangleShape2D_qm8lu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Enemy"]]
light_mask = 0
shape = SubResource("RectangleShape2D_05wi8")

[node name="contacthurtbox" parent="." instance=ExtResource("2_n3a6s")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="contacthurtbox"]
shape = SubResource("RectangleShape2D_owgmq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dt8hy")
animation = &"new_animation"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xad4x")
}
speed_scale = 0.7

[node name="RayCastPlayerfinder" type="RayCast2D" parent="."]
position = Vector2(135.00002, -1)
scale = Vector2(10, 10)
target_position = Vector2(61.799995, 0.19999993)
collision_mask = 3

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
